--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-country-state-city": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
