--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "yup": "^1.6.1",
-    "react-country-state-city": "^1.1.3",
-    "react-image-crop": "^11.0.7"
+    "react-country-state-city": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
